--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="three.js, webgl, tutorial, game, 3d, animation, airplane, web development, javascript" />
 		<meta name="author" content="Karim Maaloul for Codrops" />
     <link rel="shortcut icon" href="favicon.ico">
-		<!-- <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700italic' rel='stylesheet' type='text/css'> -->
+		<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/game.css" />
 
@@ -20,7 +20,8 @@
 
   </head>
   <body>
-			<!-- <div class="header">
+		<div class="game-holder" id="gameHolder">
+			<div class="header">
 				<h1><span>the</span>Aviator</h1>
 				<h2>fly it to the end</h2>
 				<div class="score" id="score">
@@ -46,8 +47,7 @@
 			</div>
 			<div class="world" id="world"></div>
 			<div class="message message--replay" id="replayMessage">Click to Replay</div>
-			<div class="message message--instructions" id="instructions">Grab the blue pills<span>avoid the red ones</span></div> -->
-
-    <div class="world" id="world"></div>
+			<div class="message message--instructions" id="instructions">Grab the blue pills<span>avoid the red ones</span></div>
+		</div>
   </body>
 </html>
